tests/interp/bad/g64-r-on-g61.ngc
;R word with no g code that uses it
g61 r0.5
